--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -13,9 +13,9 @@
 	<inceptionYear>2007</inceptionYear>
 	
 	<scm>
-		<connection>scm:git:git://lilith.git.sourceforge.net/gitroot/lilith/lilith</connection>
-		<developerConnection>scm:git:ssh://lilith.git.sourceforge.net/gitroot/lilith/lilith</developerConnection>
-		<url>http://lilith.git.sourceforge.net/git/gitweb.cgi?p=lilith/lilith</url>
+		<connection>scm:git:git://github.com/huxi/lilith.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:huxi/lilith.git</developerConnection>
+		<url>http://github.com/huxi/lilith/</url>
 	</scm>
 	
 	<properties>
@@ -626,24 +626,26 @@
 	
 	<reporting>
 		<plugins>
-			<!-- missing git support
 			<plugin>
 				<artifactId>maven-changelog-plugin</artifactId>
-				<version>2.1</version>
+				<version>2.2</version>
 				<configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.scm</groupId>
-						<artifactId>maven-scm-provider-git</artifactId>
-						<version>1.2</version>
-					</dependency>
-				</dependencies>
+					<type>range</type>
+					<range>120</range>
+					<displayFileDetailUrl>http://github.com/huxi/lilith/blob/master/%FILE%</displayFileDetailUrl>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.maven.scm</groupId>
+							<artifactId>maven-scm-provider-git</artifactId>
+							<version>1.3</version>
+						</dependency>
+					</dependencies>
 				</configuration>
 			</plugin>
-			-->
+			
 			<plugin>
 				<artifactId>maven-changes-plugin</artifactId>
-				<version>2.1</version>
+				<version>2.3</version>
 				<reportSets>
 					<reportSet>
 						<reports>
@@ -655,27 +657,26 @@
 					<issueLinkTemplatePerSystem>
 						<default>http://apps.sourceforge.net/trac/lilith/ticket/%ISSUE%</default>
 					</issueLinkTemplatePerSystem>
-					<!--
-					<issueLinkTemplate>http://apps.sourceforge.net/trac/sulky/ticket/%ISSUE%</issueLinkTemplate>
-					-->
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<!-- <version>2.6.1</version> http://jira.codehaus.org/browse/MJAVADOC-268 -->
-				<version>2.5</version>
+				<version>2.7</version>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.1</version>
-				
+				<version>2.2</version>
 				<configuration>
 					<aggregate>true</aggregate>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.5</version>
 				<configuration>
 					<format>xml</format>
 					<sourceEncoding>utf-8</sourceEncoding>
@@ -683,31 +684,32 @@
 					<targetJdk>1.5</targetJdk>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>2.0.1</version>
+				<version>2.1.1</version>
 			</plugin>
 			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.4</version>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.1</version>
-				<!--
+				<version>2.3.1</version>
 				<configuration>
+					<findbugsXmlOutput>true</findbugsXmlOutput>
+					<xmlOutput>true</xmlOutput>
+					<!--
+					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
 					<threshold>High|Normal|Low|Exp|Ignore</threshold>
+					-->
 				</configuration>
-				-->
 			</plugin>
-			<!--
-			Can't handle
-			@SuppressWarnings({"unchecked"})
-			:(
-			-->
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>javancss-maven-plugin</artifactId>
@@ -719,6 +721,7 @@
 				<artifactId>jdepend-maven-plugin</artifactId>
 				<version>2.0-beta-2</version>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>taglist-maven-plugin</artifactId>
@@ -761,93 +764,115 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-antrun-plugin</artifactId>
-					<version>1.3</version>
+					<version>1.4</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2-beta-4</version>
+					<version>2.2-beta-5</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
-					<version>2.3</version>
+					<version>2.4.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.0.2</version>
+					<version>2.3.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.4</version>
+					<version>2.5</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-ear-plugin</artifactId>
-					<version>2.3.2</version>
+					<version>2.4.2</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-ejb-plugin</artifactId>
-					<version>2.2</version>
+					<version>2.2.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-idea-plugin</artifactId>
 					<version>2.2</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-install-plugin</artifactId>
-					<version>2.3</version>
+					<version>2.3.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.2</version>
+					<version>2.3.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<!-- <version>2.6.1</version> http://jira.codehaus.org/browse/MJAVADOC-268 -->
-					<version>2.5</version>
+					<version>2.7</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-plugin-plugin</artifactId>
-					<version>2.5.1</version>
+					<version>2.6</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-rar-plugin</artifactId>
 					<version>2.2</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-release-plugin</artifactId>
-					<version>2.0-beta-9</version>
+					<version>2.0</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.4.1</version>
+					<version>2.4.3</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-scm-plugin</artifactId>
-					<version>1.2</version>
+					<version>1.3</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>2.1</version>
+					<version>2.1.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-gpg-plugin</artifactId>
 					<version>1.1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-source-plugin</artifactId>
-					<version>2.1</version>
+					<version>2.1.2</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.4.3</version>
+					<version>2.5</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.1-beta-1</version>
 				</plugin>
+				
 				<plugin>
 					<artifactId>maven-shade-plugin</artifactId>
 					<version>1.3.3</version>
@@ -856,15 +881,23 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>cobertura-maven-plugin</artifactId>
-					<version>2.3</version>
+					<version>2.4</version>
 				</plugin>
+				
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>buildnumber-maven-plugin</artifactId>
 					<version>1.0-beta-3</version>
+					<!--
+					http://jira.codehaus.org/browse/MOJO-1524
+					http://jira.codehaus.org/browse/MOJO-1379
+					
+					<version>1.0-beta-4</version>
+					-->
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		
 		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
@@ -872,6 +905,7 @@
 				<version>1.0-beta-6</version>
 			</extension>
 		</extensions>
+		
 		<plugins>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -896,6 +930,7 @@
 					</links>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
 				<executions>
@@ -907,6 +942,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -916,12 +952,14 @@
 					<showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-scm-plugin</artifactId>
 				<configuration>
 					<goals>install</goals>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-idea-plugin</artifactId>
 				<!--
@@ -934,6 +972,7 @@
 				</configuration>
 				-->
 			</plugin>
+			
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
@@ -947,6 +986,7 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -958,6 +998,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
