--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,17 @@
 	<url>http://lilith.huxhorn.de/projects/${pom.artifactId}/</url>
 	
 	<scm>
-		<connection>scm:git:git://lilith.git.sourceforge.net/gitroot/lilith/lilith</connection>
-		<developerConnection>scm:git:ssh://lilith.git.sourceforge.net/gitroot/lilith/lilith</developerConnection>
-		<url>http://lilith.git.sourceforge.net/git/gitweb.cgi?p=lilith/lilith</url>
+		<connection>scm:git:git://github.com/huxi/lilith.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:huxi/lilith.git</developerConnection>
+		<url>http://github.com/huxi/lilith/</url>
 	</scm>
 	
+	<properties>
+		<!-- The following lines prevent "[WARNING] Using platform encoding[..]" messages -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<distributionManagement>
 
 		<site>
@@ -58,24 +64,25 @@
 	
 	<reporting>
 		<plugins>
+		
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.2</version>
 				<configuration>
 					<aggregate>true</aggregate>
 					<javadocDir>target/site/apidocs/</javadocDir>
 					<linkJavadoc>true</linkJavadoc>
 				</configuration>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.7</version>
 				<configuration>
-					<aggregate>true</aggregate>
 					<links>
-						<link>
-							http://java.sun.com/j2se/1.5.0/docs/api
-						</link>
+						<link>http://java.sun.com/javase/6/docs/api/</link>
 					</links>
 					<groups>
 						<group>
@@ -89,11 +96,45 @@
 					</groups>
 				</configuration>
 			</plugin>
-		
+			
+			<plugin>
+				<artifactId>maven-changelog-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<type>range</type>
+					<range>120</range>
+					<displayFileDetailUrl>http://github.com/huxi/lilith/blob/master/%FILE%</displayFileDetailUrl>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.maven.scm</groupId>
+							<artifactId>maven-scm-provider-git</artifactId>
+							<version>1.3</version>
+						</dependency>
+					</dependencies>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<artifactId>maven-changes-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<xmlPath>${basedir}/lilith/src/changes/changes.xml</xmlPath>
+					<issueLinkTemplatePerSystem>
+						<default>http://apps.sourceforge.net/trac/lilith/ticket/%ISSUE%</default>
+					</issueLinkTemplatePerSystem>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>changes-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			
 		</plugins>
 	
 	</reporting>
-
 
 </project>
 
