--- a/lilith/pom.xml
+++ b/lilith/pom.xml
@@ -395,21 +395,9 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<!--
 		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		-->
-
-		<!--
-		commons-lang dependency below is needed to override 1.0 dependency
-		from commons-cli
-		-->
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		
@@ -424,14 +412,7 @@
 			<artifactId>de.huxhorn.sulky.buffers.filtering</artifactId>
 			<scope>compile</scope>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>commons-httpclient</groupId>
-			<artifactId>commons-httpclient</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		-->
-		
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
