--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -13,14 +13,14 @@ versions = [
 libraries = [
 'aspectjrt':                "org.aspectj:aspectjrt:${versions.aspectj}",
 'aspectjweaver':            "org.aspectj:aspectjweaver:${versions.aspectj}",
-'cglib-nodep':              'cglib:cglib-nodep:2.2',
+'cglib-nodep':              'cglib:cglib-nodep:2.2.2',
 'commons-io':               'commons-io:commons-io:2.0.1',
-'commons-lang':             'org.apache.commons:commons-lang3:3.0',
+'commons-lang':             'org.apache.commons:commons-lang3:3.0.1',
 'flyingsaucer':             'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.flyingsaucer.core-renderer:8RC1',
 'glazedlists':              'net.java.dev.glazedlists:glazedlists_java15:1.8.0',
 'groovy':                   'org.codehaus.groovy:groovy:1.8.1',
-'httpclient':               "org.apache.httpcomponents:httpclient:4.1",
-'httpcore':                 "org.apache.httpcomponents:httpcore:4.1",
+'httpclient':               'org.apache.httpcomponents:httpclient:4.1.2',
+'httpcore':                 'org.apache.httpcomponents:httpcore:4.1.3',
 'jcl-over-slf4j':           "org.slf4j:jcl-over-slf4j:${versions.slf4j}",
 'jgroups-all':              'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jgroups-all:2.8.0.CR3',
 'jmdns':                    'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.jmdns:3.0',
@@ -28,7 +28,6 @@ libraries = [
 'jackson-mapper':           "org.codehaus.jackson:jackson-mapper-lgpl:${versions.jackson}",
 'jcommander':               'com.beust:jcommander:1.18',
 'jgoodies-looks':           'com.jgoodies:looks:2.2.2',
-'joda-time':                'joda-time:joda-time:1.6.2',
 'junique':                  'de.huxhorn.lilith:de.huxhorn.lilith.3rdparty.junique:1.0.2',
 'junit':                    'junit:junit:4.8.2',
 'log4j':                    "log4j:log4j:${versions.log4j}",
