--- a/config.gradle
+++ b/config.gradle
@@ -95,14 +95,13 @@ task javadocZip(type: Zip) {
 }
 
 signing {
-	if (System.properties.'release') {
-		sign javadocZip
-		sign sourceZip
-	}
+	required = { !version.endsWith("SNAPSHOT") }
+	sign javadocZip
+	sign sourceZip
 }
 
 gradle.taskGraph.whenReady { taskGraph ->
-	if (taskGraph.allTasks.any { it instanceof Sign }) {
+	if(taskGraph.allTasks.any { it instanceof Sign } && !version.endsWith("SNAPSHOT")) {
 		String pgpPassword = System.properties.'pgpPassword'
 		if(!pgpPassword) {
 			Console console = System.console()
@@ -148,9 +147,8 @@ subprojects {
     compileTestJava.options.compilerArgs = compilerArgs
 
 	signing {
-		if (System.properties.'release') {
-			sign configurations.archives
-		}
+		required = { !version.endsWith("SNAPSHOT") }
+		sign configurations.archives
 	}
 
 	boolean gpl=['lilith', 'lilith-conditions', 'lilith-engine', 'lilith-xml-logging'].contains(project.name)
@@ -298,9 +296,7 @@ subprojects {
 				}
 			}
 			beforeDeployment { MavenDeployment deployment ->
-				if(System.properties.'release') {
-					signPom(deployment)
-				}
+				signing.signPom(deployment)
 			}
 		}
 	}
@@ -614,12 +610,11 @@ project(':lilith') {
 	}
 	
 	signing {
-		if (System.properties.'release') {
-			sign distZip
-			sign myDistZip
-			sign myDistTgz
-			sign appTgz
-		}
+		required = { !version.endsWith("SNAPSHOT") }
+		sign distZip
+		sign myDistZip
+		sign myDistTgz
+		sign appTgz
 	}
 }
 
